bundles/org.openhab.binding.jellyfin/src/main/java/org/openhab/binding/jellyfin/internal/api/generated/10.10.3/docs/SearchHint.md


# SearchHint

Class SearchHintResult.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**itemId** | **UUID** | Gets or sets the item id. |  [optional] |
|**id** | **UUID** | Gets or sets the item id. |  [optional] |
|**name** | **String** | Gets or sets the name. |  [optional] |
|**matchedTerm** | **String** | Gets or sets the matched term. |  [optional] |
|**indexNumber** | **Integer** | Gets or sets the index number. |  [optional] |
|**productionYear** | **Integer** | Gets or sets the production year. |  [optional] |
|**parentIndexNumber** | **Integer** | Gets or sets the parent index number. |  [optional] |
|**primaryImageTag** | **String** | Gets or sets the image tag. |  [optional] |
|**thumbImageTag** | **String** | Gets or sets the thumb image tag. |  [optional] |
|**thumbImageItemId** | **String** | Gets or sets the thumb image item identifier. |  [optional] |
|**backdropImageTag** | **String** | Gets or sets the backdrop image tag. |  [optional] |
|**backdropImageItemId** | **String** | Gets or sets the backdrop image item identifier. |  [optional] |
|**type** | **BaseItemKind** | The base item kind. |  [optional] |
|**isFolder** | **Boolean** | Gets or sets a value indicating whether this instance is folder. |  [optional] |
|**runTimeTicks** | **Long** | Gets or sets the run time ticks. |  [optional] |
|**mediaType** | **MediaType** | Media types. |  [optional] |
|**startDate** | **OffsetDateTime** | Gets or sets the start date. |  [optional] |
|**endDate** | **OffsetDateTime** | Gets or sets the end date. |  [optional] |
|**series** | **String** | Gets or sets the series. |  [optional] |
|**status** | **String** | Gets or sets the status. |  [optional] |
|**album** | **String** | Gets or sets the album. |  [optional] |
|**albumId** | **UUID** | Gets or sets the album id. |  [optional] |
|**albumArtist** | **String** | Gets or sets the album artist. |  [optional] |
|**artists** | **List&lt;String&gt;** | Gets or sets the artists. |  [optional] |
|**songCount** | **Integer** | Gets or sets the song count. |  [optional] |
|**episodeCount** | **Integer** | Gets or sets the episode count. |  [optional] |
|**channelId** | **UUID** | Gets or sets the channel identifier. |  [optional] |
|**channelName** | **String** | Gets or sets the name of the channel. |  [optional] |
|**primaryImageAspectRatio** | **Double** | Gets or sets the primary image aspect ratio. |  [optional] |



